--- a/index.html
+++ b/index.html
@@ -36,33 +36,13 @@
         <div><p>🌍<br>ECO-FRIENDLY PACKAGING</p></div>
     </section>
 
-    <section class="new-arrivals" id="arrivals">
-        <h2>NEW ARRIVALS</h2>
-        <div class="products">
-            <div class="product">
-                <div id="product-list"></div>
-                <a href="product1.html">
-                <img src="shirt2.png" alt="City of Shirts"/>
-                <p>City of Shirts<br><strong>$30.00</strong></p>
-                 <div class="product-rating">★★★★★</div>
-                </a>
-            </div>
-            <div class="product">
-                <a href="product1.html">
-                <img src="shirt3.png" alt="Street Sweat Hoodie"/>
-                <p>Street Sweat Hoodie<br><strong>$55.00</strong></p>
-                <div class="product-rating">★★★★★</div>
-                </a>
-            </div>
-            <div class="product">
-                <a href="product1.html">
-                <img src="shirt4.png" alt="Urban Sweat Shirt"/>
-                <p>Urban Sweat Shirt<br><strong>$40.00</strong></p>
-                <div class="product-rating">★★★★★</div>
-                </a>
-            </div>
-        </div>
+    <section id="new-arrivals">
+      <h2>NEW ARRIVALS</h2>
+
+      <div id="arrivals" class="products">
+      </div>
     </section>
+
 
     <section class="client-reviews">
         <div class="reviews">
@@ -174,5 +154,32 @@ fetch("http://localhost:3000/products")
     console.error("Error loading products:", error);
   });
 </script>
+<script>
+fetch("products.json")
+  .then(response => response.json())
+  .then(products => {
+    const container = document.getElementById("arrivals");
+
+    if (!container) {
+      console.error("Arrivals container not found");
+      return;
+    }
+
+    container.innerHTML = "";
+
+    products.forEach(product => {
+      container.innerHTML += `
+        <div class="product-card">
+          <img src="${product.image}" alt="${product.name}">
+          <a href="#">${product.name}</a>
+          <p>$${product.price.toFixed(2)}</p>
+          <div class="stars">★★★★★</div>
+        </div>
+      `;
+    });
+  })
+  .catch(error => console.error("Error loading products:", error));
+</script>
 </body>
 </html>
+
